--- a/CSS/style.CSS
+++ b/CSS/style.CSS
@@ -15,10 +15,10 @@
     margin: 0px 15px;
   }
 .navbar-brand {
-    color: #9C0861;
+    color: #680541;
 }
 .nav-link {
-    color: #9C0861;
+    color: #680541;
 }
 .btn.btn-primary {
     background-color: #9C0861;
@@ -41,4 +41,16 @@
     max-width: 700px;
     color: white;
     text-align: center;
+}
+
+.card-header {
+    background-color: #E9E4DC;
+}
+
+.btn.btn-link {
+    color: #680541;
+}
+.card-body {
+    color: black;
+    background-color: white;
 }
