--- a/CSS/style.CSS
+++ b/CSS/style.CSS
@@ -38,9 +38,11 @@
 .jumboCopy {
     width: 70%;
     min-width: 500px;
-    max-width: 700px;
+    max-width: 1000px;
     color: white;
     text-align: center;
+    text-shadow: 2px 2px 4px black;
+}
 }
 
 .card-header {
